--- a/Interference/PartialData/Alarms/list.alarms.unknown.json
+++ b/Interference/PartialData/Alarms/list.alarms.unknown.json
@@ -1,6 +1,6 @@
 [
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -24,7 +24,7 @@
 		"persistentID": "Alarm_UN_Class2_16Cluster"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -51,7 +51,7 @@
 		"persistentID": "Alarm_UN_Class3_16Cluster"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -78,7 +78,7 @@
 		"persistentID": "Alarm_UN_Class3_Cluster"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -102,7 +102,7 @@
 		"persistentID": "Alarm_UN_Class2_Cluster"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -126,7 +126,7 @@
 		"persistentID": "Alarm_UN_Class2_Surge"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -153,7 +153,7 @@
 		"persistentID": "Alarm_UN_Class3_Surge"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": 1,
 		"SurvivalWavePopulation": 1,
@@ -180,7 +180,7 @@
 		"persistentID": "Alarm_UN_Class3"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": "WaveSetting_Apex_SmallOnly",
 		"SurvivalWavePopulation": 18,
@@ -201,7 +201,7 @@
 		"persistentID": "Alarm_UN_S1"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": "WaveSetting_Apex_SmallOnly",
 		"SurvivalWavePopulation": 18,
@@ -228,7 +228,7 @@
 		"persistentID": "Alarm_UN_S1_3"
 	},
 	{
-		"PublicAlarmName": "Class [//:UNKNOWN] Alarm",
+		"PublicAlarmName": "[SHUFFLE_TYPE2]",
 		"TriggerAlarmOnActivate": true,
 		"SurvivalWaveSettings": "WaveSetting_Apex_SmallOnly",
 		"SurvivalWavePopulation": 18,
